--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activitis.EditorActivity">
+    tools:context="farshid_roohi.ir.note.activitis.EditorActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
