--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="farshid_roohi.ir.plainolnote.activitis.EditorActivity">
+    tools:context="farshid_roohi.ir.plainolnote.farshid_roohi.ir.note.activitis.EditorActivity">
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_delete"
